--- a/Inkscape/Inkscapes nybörjarguide/calligraphy-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/calligraphy-tool.po
@@ -128,7 +128,7 @@ msgid ""
 "With the :guilabel:`Marker` setting, the paths look smooth and their ends are "
 "rounded."
 msgstr ""
-"Med inställningen :guilabel:`Marker` ser banorna släta ut och ändarna är "
+"Med inställningen :guilabel:`Marker` ser slingorna släta ut och ändarna är "
 "rundade."
 
 #: ../../source/calligraphy-tool.rst:51 3ba218b2c8414f93a2b300c11623babd
