--- a/Inkscape/Inkscapes nybörjarguide/creating-custom-fonts.po
+++ b/Inkscape/Inkscapes nybörjarguide/creating-custom-fonts.po
@@ -23,17 +23,17 @@ msgstr ""
 
 #: ../../source/creating-custom-fonts.rst:3 2279c3406e534569ae20474159272098
 msgid "Creating Custom Fonts"
-msgstr "Skapa anpassade teckensnitt"
+msgstr "Skapa anpassade typsnitt"
 
 #: ../../source/creating-custom-fonts.rst:5 11d9215be215432aa3afceac2791b34a
 msgid ""
 "Fonts can be saved in different file formats: OTF, TTF and SVG (and some more)."
 msgstr ""
-"Teckensnitt kan sparas i olika filformat: OTF, TTF och SVG (och några till)."
+"Typsnitt kan sparas i olika filformat: OTF, TTF och SVG (och några till)."
 
 #: ../../source/creating-custom-fonts.rst:7 612227aef9c546cfabc701a20fcbc581
 msgid "With Inkscape, you can create :term:`SVG fonts <SVG font>`."
-msgstr "Med Inkscape kan du skapa :term:`SVG-teckensnitt <SVG font>`."
+msgstr "Med Inkscape kan du skapa :term:`SVG-typsnitt <SVG font>`."
 
 #: ../../source/creating-custom-fonts.rst:9 3b99b0feb04d4d80bfb277eec055d3a4
 msgid ""
@@ -41,9 +41,9 @@ msgid ""
 "in a text editor or graphics program, however, they must later be converted to "
 "another font file format."
 msgstr ""
-"Dessa teckensnitt är inbäddade i den resulterande SVG-filen. För att kunna "
+"Dessa typsnitt är inbäddade i den resulterande SVG-filen. För att kunna "
 "använda dem i en textredigerare eller ett grafikprogram måste de dock senare "
-"konverteras till ett annat format för teckensnittsfiler."
+"konverteras till ett annat format för typsnittsfiler."
 
 #: ../../source/creating-custom-fonts.rst:11 3a394a6c8e2d45ad90423b1d0692228a
 msgid ""
@@ -52,11 +52,11 @@ msgid ""
 "standard. However, they are useful for font-making in Inkscape, and other font-"
 "making programs can still convert them to other font file formats."
 msgstr ""
-"Du kommer inte att kunna använda SVG-filen direkt som ett teckensnitt på en "
-"webbsida, till exempel. Detta beror på att SVG-teckensnitt har tagits bort från "
-"den officiella SVG-standarden. De är dock användbara för att skapa teckensnitt "
-"i Inkscape, och andra program för att skapa teckensnitt kan fortfarande "
-"konvertera dem till andra teckensnittsfilformat."
+"Du kommer inte att kunna använda SVG-filen direkt som ett typsnitt på en "
+"webbsida, till exempel. Detta beror på att SVG-typsnitt har tagits bort från "
+"den officiella SVG-standarden. De är dock användbara för att skapa typsnitt "
+"i Inkscape, och andra program för att skapa typsnitt kan fortfarande "
+"konvertera dem till andra typsnittsfilformat."
 
 #: ../../source/creating-custom-fonts.rst:15 85b2e0779dc74068828b04e8933bce1b
 msgid ""
@@ -94,7 +94,7 @@ msgid ""
 msgstr ""
 "I kolumnen :guilabel:`Font` klickar du på :guilabel:`New` för att skapa ett "
 "typsnitt. Du kan dubbelklicka på det generiska namnet, i det här "
-"fallet :guilabel:`font 1`, för teckensnittet för att ändra det."
+"fallet :guilabel:`font 1`, för typsnittet för att ändra det."
 
 #: ../../source/creating-custom-fonts.rst:23 a9596c9b16574b57b1c50a3f9faae3ba
 msgid "Open the :guilabel:`Layers` dialog from :menuselection:`Layer --> Layers`."
@@ -136,7 +136,7 @@ msgid ""
 "which may consist of multiple subpaths."
 msgstr ""
 "Rita slingan för din glyf på målarduken. Det måste vara en sluten, enkel slinga som "
-"kan bestå av flera delbanor."
+"kan bestå av flera delslingor."
 
 #: ../../source/creating-custom-fonts.rst:38 09ba0a07996a41aa9100e92d8214baa1
 msgid ""
