--- a/Inkscape/Inkscapes nybörjarguide/custom-markers.po
+++ b/Inkscape/Inkscapes nybörjarguide/custom-markers.po
@@ -47,7 +47,7 @@ msgstr ""
 
 #: ../../source/custom-markers.rst:12 f4db03ef4056482da77de7eb01f40110
 msgid "Markers and path"
-msgstr "Markörer och stig"
+msgstr "Markörer och slinga"
 
 #: ../../source/custom-markers.rst:16 5a3251bb0d9f4939b3b41e0f80783b27
 msgid ""
