--- a/Inkscape/Inkscapes nybörjarguide/editing-paths.po
+++ b/Inkscape/Inkscapes nybörjarguide/editing-paths.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/editing-paths.rst:3 a6e02f8ef602441fb10190b23a09e1f9
 msgid "Editing Paths with the Node Tool"
-msgstr "Redigera banor med nodverktyget"
+msgstr "Redigera slingor med nodverktyget"
 
 #: ../../source/editing-paths.rst:5 92881094fb324575844c736f529fab91
 msgid "|Large icon for Node Tool| :kbd:`F2` or :kbd:`N`"
@@ -39,11 +39,11 @@ msgid ""
 "friend when you need to **edit a path**."
 msgstr ""
 "Det näst mest använda verktyget i Inkscape är **Node tool**. Det kommer att "
-"vara din vän när du behöver **redigera en sökväg**."
+"vara din vän när du behöver **redigera en slinga**."
 
 #: ../../source/editing-paths.rst:9 ac380bb7dfbd4d73b32b2ab5da2949c3
 msgid "What you need to know about paths"
-msgstr "Vad du behöver veta om banor"
+msgstr "Vad du behöver veta om slingor"
 
 #: ../../source/editing-paths.rst:11 e306eb59899e4ff8b7324e00d72b2b36
 msgid ""
@@ -85,7 +85,7 @@ msgid ""
 "handle on the line that represents the path."
 msgstr ""
 "I Inkscape markeras en nods position med en kvadrat, cirkel eller diamant på "
-"den linje som representerar sökvägen."
+"den linje som representerar slingan."
 
 #: ../../source/editing-paths.rst:25 72b70fbe471d4942ab7c0d5d65752dc1
 msgid ""
@@ -102,7 +102,7 @@ msgstr "Aktivera Nodverktyget."
 #: ../../source/editing-paths.rst:29 ../../source/editing-paths.rst:49
 #: 29de95f1908c4c05ad1579197ec858dd 91f3bd2670b14de78561dd70091ff753
 msgid "Click on the path to select it."
-msgstr "Klicka på sökvägen för att markera den."
+msgstr "Klicka på slingan för att markera den."
 
 #: ../../source/editing-paths.rst:30 2325dad64acb4062a8d23c30f2e8256a
 msgid "Click and drag the node you wish to reposition."
@@ -115,7 +115,7 @@ msgstr "Nod med ett inkommande och ett utgående vägsegment."
 #: ../../source/editing-paths.rst:36 3dda71a60c8f49f3bfc466e872301244
 msgid "This node has an incoming and an outgoing path segment connected to it."
 msgstr ""
-"Denna nod har ett inkommande och ett utgående bansegment som är anslutna "
+"Denna nod har ett inkommande och ett utgående slingsegment som är anslutna "
 "till den."
 
 #: ../../source/editing-paths.rst:38 4af2a40374094c3d9abb047d0b5bfd04
@@ -133,10 +133,10 @@ msgid ""
 "lines. These handles can be moved around with the mouse, too. The handles "
 "control the shape of the adjacent path segment."
 msgstr ""
-"För mer gradvisa förändringar kan banorna redigeras med hjälp av nodernas "
+"För mer gradvisa förändringar kan slingorna redigeras med hjälp av nodernas "
 "handtag. Varje nod kan ha upp till två cirkulära handtag som är anslutna "
 "till den med tunna linjer. Dessa handtag kan också flyttas runt med musen. "
-"Handtagen styr formen på det intilliggande bansegmentet."
+"Handtagen styr formen på det intilliggande slingsegmentet."
 
 #: ../../source/editing-paths.rst:50 8947b8222ea74acfa0f5ad0c47b7624a
 msgid "Click on the node you wish to edit."
@@ -152,7 +152,7 @@ msgstr "Flyttbara handtag"
 
 #: ../../source/editing-paths.rst:57 779f0032c25b4a84b08a128f481bee8d
 msgid "You can modify path segments by moving the node's handles."
-msgstr "Du kan ändra bansegment genom att flytta nodens handtag."
+msgstr "Du kan ändra slingsegment genom att flytta nodens handtag."
 
 #: ../../source/editing-paths.rst:59 64d149a7f411470ea1a29649f57e47ad
 msgid ""
@@ -161,7 +161,7 @@ msgid ""
 "connects two nodes, to change its curvature, without having to use the "
 "handles for this."
 msgstr ""
-"Du kan också manipulera linjerna mellan noderna (bansegmenten) direkt med "
+"Du kan också manipulera linjerna mellan noderna (slingsegmenten) direkt med "
 "hjälp av Node-verktyget. Klicka och dra på det vägsegment som förbinder två "
 "noder för att ändra dess krökning, utan att behöva använda handtagen för "
 "detta."
