--- a/Inkscape/Inkscapes nybörjarguide/export-other-formats.po
+++ b/Inkscape/Inkscapes nybörjarguide/export-other-formats.po
@@ -61,7 +61,7 @@ msgstr ""
 "använder funktionen :guilabel:`Spara en kopia` för detta och att du sparar "
 "din originalfil som :guilabel:`Inkscape SVG`. På så sätt kan du alltid gå "
 "tillbaka och göra ändringar i originalritningen och du förlorar inte "
-"användbara redigeringsdata, t.ex. guider, rutnät, baneffekter, lager och "
+"användbara redigeringsdata, t.ex. guider, rutnät, slingeffekter, lager och "
 "mycket mer."
 
 #: ../../source/export-other-formats.rst:21 3e1d7df2791a4d11b7865da4d662c0a0
@@ -172,7 +172,7 @@ msgstr "standardiserat filformat för dokumentutbyte"
 
 #: ../../source/export-other-formats.rst:62 b7a8c67149ae437b88b92b42fff4176c
 msgid "PovRay (\\*.pov) (paths and shapes only)"
-msgstr "PovRay (\\*.pov) (endast banor och former)"
+msgstr "PovRay (\\*.pov) (endast slingor och former)"
 
 #: ../../source/export-other-formats.rst:63 61ef0b6be5c1447d9af7164b6c4a1f67
 msgid "file format for a 3D ray tracing software"
