--- a/Inkscape/Inkscapes nybörjarguide/export-pdf.po
+++ b/Inkscape/Inkscapes nybörjarguide/export-pdf.po
@@ -74,10 +74,10 @@ msgid ""
 "create LaTeX file`."
 msgstr ""
 ":guilabel:`Optioner för textutmatning`: Om din text måste vara sökbar i "
-"PDF-filen och teckensnittslicensen tillåter att du bäddar in "
-"teckensnittet, välj :guilabel:`Embed fonts`. När texten mest är "
+"PDF-filen och typsnittslicensen tillåter att du bäddar in "
+"typsnittet, välj :guilabel:`Embed fonts`. När texten mest är "
 "dekorativ (som i en logotyp) är det bättre att konvertera texten till "
-"banor. Om du skriver på en avhandling eller ett annat vetenskapligt "
+"slingor. Om du skriver på en avhandling eller ett annat vetenskapligt "
 "dokument och vet hur man arbetar med LaTeX, kan du använda det tredje "
 "alternativet :guilabel:`Omit text in PDF and create LaTeX file`."
 
