--- a/Inkscape/Inkscapes nybörjarguide/extensions.po
+++ b/Inkscape/Inkscapes nybörjarguide/extensions.po
@@ -73,7 +73,7 @@ msgid ""
 "scripts need a path to start with, so they can create something from it."
 msgstr ""
 ":guilabel:`Generate from Path` och :guilabel:`Modify Path`: Dessa "
-"tilläggsskript behöver en sökväg att börja med, så att de kan skapa något från "
+"tilläggsskript behöver en slinga att börja med, så att de kan skapa något från "
 "den."
 
 #: ../../source/extensions.rst:17 5d1759756afe431f889079a341bcbb48
@@ -106,7 +106,7 @@ msgid ""
 ":guilabel:`Typography`: For quickly creating SVG fonts (independently from SVG "
 "Font Editor)."
 msgstr ""
-":guilabel:`Typografi`: För att snabbt skapa SVG-teckensnitt (oberoende av SVG "
+":guilabel:`Typografi`: För att snabbt skapa SVG-typsnitt (oberoende av SVG "
 "Font Editor)."
 
 #: ../../source/extensions.rst:24 41be213b8d8d4496898169072598cba4
@@ -114,8 +114,8 @@ msgid ""
 ":guilabel:`Visualize Path`: Offers multiple options to visualize different "
 "properties of a path."
 msgstr ""
-":guilabel:`Visualisera sökväg`: Erbjuder flera alternativ för att visualisera "
-"olika egenskaper hos en sökväg."
+":guilabel:`Visualisera slinga`: Erbjuder flera alternativ för att visualisera "
+"olika egenskaper hos en slinga."
 
 #: ../../source/extensions.rst:26 7f4719eef2534d3dadc678a4756fae92
 msgid ""
@@ -167,12 +167,12 @@ msgid ""
 msgstr ""
 "Detta tillägg ritar stegen som omvandlar en väg till en annan. Börja med att "
 "skapa en första slinga och sedan en annan som är målet för omvandlingen. Markera "
-"båda banorna och öppna tilläggets dialogruta med :menuselection:`Tillägg --> "
+"båda slingorna och öppna tilläggets dialogruta med :menuselection:`Tillägg --> "
 "Generera från slinga --> Interpolera`. Du kommer att bli tillfrågad om antalet "
 "steg som du vill generera.  När du trycker på :guilabel:`Apply` kommer "
-"resultatet att visas på duken. Det består av en grupp med så många banor som du "
-"har angett för värdet :guilabel:`Steps`. Alla banor kommer att ha samma stil. "
-"Du kan ta bort grupperna när du vill redigera varje sökväg separat och anpassa "
+"resultatet att visas på duken. Det består av en grupp med så många slingor som du "
+"har angett för värdet :guilabel:`Steps`. Alla slingor kommer att ha samma stil. "
+"Du kan ta bort grupperna när du vill redigera varje slinga separat och anpassa "
 "deras stilar."
 
 #: ../../source/extensions.rst:51 c215ebbd774645c5bc59d30a461a7b5d
@@ -197,7 +197,7 @@ msgstr ""
 "Detta tillägg kedjar kopior av ett objekt så att de följer krökningen av en "
 "slinga som du har ritat. Rita först din slinga. Du kan använda verktyget Pen/Bézier "
 "för detta. Skapa sedan ditt mönster. Mönstret kan vara en slinga, även en som "
-"består av flera underbanor, och till och med en grupp."
+"består av flera underslingor, och till och med en grupp."
 
 #: ../../source/extensions.rst:61 d72becdadc014f7e886c92d429759c10
 msgid ""
@@ -223,7 +223,7 @@ msgstr ""
 "möjligt på slingan, eller om det ska sträckas ut så att det börjar vid slingans "
 "början och slutar exakt vid dess slutpunkt (och inte därefter). Med "
 "alternativet :guilabel:`deformationstyp` kan du välja om objekten helt enkelt "
-"ska kedjas eller om de ska se ut som om de är tryckta på ett band. De andra "
+"ska kedjas eller om de ska se ut som om de är tryckta på ett slingd. De andra "
 "alternativen handlar om att justera objektens position i förhållande till "
 "varandra och till slingan."
 
@@ -258,7 +258,7 @@ msgid ""
 msgstr ""
 "Med det här tillägget kan du redigera färgen på objektets markörer. De kan "
 "antingen anpassas för att passa objektets färger (vilket är standard), eller så "
-"kan du välja en specifik färg själv. Du måste välja sökvägen med de markörer "
+"kan du välja en specifik färg själv. Du måste välja slingan med de markörer "
 "som du vill ändra och sedan öppna dialogrutan med :menuselection:`Extensions --"
 "> Modify Path --> Color Markers`. När du har valt de alternativ du behöver "
 "klickar du på :guilabel:`Apply`."
@@ -330,7 +330,7 @@ msgstr ""
 
 #: ../../source/extensions.rst:118 93d2875902a7472fa2ef58e884c89a6c
 msgid "Note that this extension will only work with paths"
-msgstr "Observera att detta tillägg endast fungerar med sökvägar"
+msgstr "Observera att detta tillägg endast fungerar med slingor"
 
 #: ../../source/extensions.rst:120 953628545c5f4e01ac7043f847f31ad1
 msgid "|image7|"
