--- a/Inkscape/Inkscapes nybörjarguide/filters.po
+++ b/Inkscape/Inkscapes nybörjarguide/filters.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:18+0200\n"
+"PO-Revision-Date: 2025-05-16 08:40+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -94,8 +94,8 @@ msgid ""
 ":menuselection:`Image Paint and Draw --> Pencil`: Converts the selected objects "
 "to a sketch."
 msgstr ""
-":menuselection:`Bildfärg och ritning --> Penna`: Konverterar de markerade "
-"objekten till en skiss."
+":menuselection:`Bildfärg och ritning --> Blyertspenna`: Konverterar de "
+"markerade objekten till en skiss."
 
 #: ../../source/filters.rst:30 3136dd2b584145bd82578c6527f13474
 msgid ""
