--- a/Inkscape/Inkscapes nybörjarguide/flowing-text-into-frame.po
+++ b/Inkscape/Inkscapes nybörjarguide/flowing-text-into-frame.po
@@ -95,11 +95,11 @@ msgid ""
 "later move on to the finer details:"
 msgstr ""
 "För att ytterligare justera texten finns det ett sista, **irreversibelt** "
-"alternativ: att omvandla en text till en sökväg. När du konverterar en text "
-"till en sökväg förlorar du alla möjligheter att redigera textens innehåll. "
+"alternativ: att omvandla en text till en slinga. När du konverterar en text "
+"till en slinga förlorar du alla möjligheter att redigera textens innehåll. "
 "Texten kommer inte längre att vara tillgänglig som ett textobjekt, men du "
-"kan nu använda alla tillgängliga alternativ för att redigera sökvägar. Det "
-"blir t.ex. omöjligt att ändra teckensnitt, teckengrad (lätt, fet, tung, ...) "
+"kan nu använda alla tillgängliga alternativ för att redigera slingor. Det "
+"blir t.ex. omöjligt att ändra typsnitt, teckengrad (lätt, fet, tung, ...) "
 "eller stil (kursiv, normal, kondenserad, ...). På grund av detta "
 "rekommenderas det att man först arbetar med den grova och allmänna formen på "
 "en text och sedan går vidare till de finare detaljerna:"
@@ -129,10 +129,10 @@ msgid ""
 "display the text."
 msgstr ""
 "Om du vill dela SVG-filen på webben, eller exportera den till en PDF-fil som "
-"du vill dela med andra, ska du konvertera alla textobjekt till sökvägar. "
-"Alla datorer har inte samma teckensnitt installerade, och filen kan se "
+"du vill dela med andra, ska du konvertera alla textobjekt till slingor. "
+"Alla datorer har inte samma typsnitt installerade, och filen kan se "
 "väldigt annorlunda ut för någon, om deras dator använder ett "
-"reservteckensnitt för att visa texten."
+"reservtypsnitt för att visa texten."
 
 #: ../../source/flowing-text-into-frame.rst:49 0e0f964c18dc48f3814852d666ab364f
 msgid "The silhouette of an octopus"
