--- a/Inkscape/Inkscapes nybörjarguide/free-drawing.po
+++ b/Inkscape/Inkscapes nybörjarguide/free-drawing.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:20+0200\n"
+"PO-Revision-Date: 2025-05-16 08:41+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -42,7 +42,7 @@ msgstr ""
 "former. Du kan rita exakt den form du behöver. Med lite övning kommer du "
 "att bli bättre och bättre på att uppnå exakt det resultat som du önskar. "
 "Och naturligtvis kan du alltid modifiera elementen i din ritning med "
-"hjälp av banverktygen."
+"hjälp av slingverktygen."
 
 #: ../../source/free-drawing.rst:7 16fa40f6a86845edb15f2243bbcdb62b
 msgid ""
@@ -52,7 +52,7 @@ msgid ""
 "vector drawings. Later on, we will explore how to edit these paths."
 msgstr ""
 "I det här avsnittet kommer vi först att lära oss hur man använder "
-"verktygen **Pencil, Pen och Calligraphy**. På så sätt lär vi oss "
-"försiktigt om det nya konceptet :term:`sökvägar <Path>`, som är kärnan i "
+"verktygen **Blyertspenna, Penna och Kalligrafi**. På så sätt lär vi oss "
+"försiktigt om det nya konceptet :term:`slingor <Path>`, som är kärnan i "
 "vektorritningar. Senare kommer vi att utforska hur man redigerar dessa "
-"banor."
+"slingor."
