--- a/Inkscape/Inkscapes nybörjarguide/glossary.po
+++ b/Inkscape/Inkscapes nybörjarguide/glossary.po
@@ -223,7 +223,7 @@ msgid ""
 "number, punctuation, ...) in a specific font."
 msgstr ""
 "Ett grafiskt element som representerar ett specifikt tecken (bokstav, "
-"siffra, skiljetecken, ...) i ett specifikt teckensnitt."
+"siffra, skiljetecken, ...) i ett specifikt typsnitt."
 
 #: ../../source/glossary.rst:45 c0e788e31a504fc2a95ee0128420b09c
 msgid "Hex Color"
@@ -528,9 +528,9 @@ msgid ""
 "different font file format (e.g. otf, ttf)."
 msgstr ""
 "Ett typsnitt vars filformat är baserat på SVG-filformatet. Inkscape kan "
-"skapa SVG-teckensnitt, men kan inte använda dem för att skriva texter. "
+"skapa SVG-typsnitt, men kan inte använda dem för att skriva texter. "
 "Ett annat program, t.ex. FontForge, krävs för att konvertera SVG-"
-"teckensnittet till ett annat filformat (t.ex. otf, ttf)."
+"typsnittet till ett annat filformat (t.ex. otf, ttf)."
 
 #: ../../source/glossary.rst:101 652acabe37ce4f25b0017b0fda1e8d3e
 msgid "XQuartz"
