--- a/Inkscape/Inkscapes nybörjarguide/grouping.po
+++ b/Inkscape/Inkscapes nybörjarguide/grouping.po
@@ -254,7 +254,7 @@ msgstr ""
 "eller dra ut ett objekt till nästa nivå."
 
 #: ../../source/grouping.rst:70 df1056ab9796414a9c2fbe156fa42753
-msgid "To disband (\"ungroup\") a group, you can either:"
+msgid "To disslingd (\"ungroup\") a group, you can either:"
 msgstr "För att upplösa (\"ungroup\") en grupp kan du antingen:"
 
 #: ../../source/grouping.rst:72 49834fafab794f64b4b816ada1019750
