--- a/Inkscape/Inkscapes nybörjarguide/installing-on-mac.po
+++ b/Inkscape/Inkscapes nybörjarguide/installing-on-mac.po
@@ -201,7 +201,7 @@ msgid ""
 msgstr ""
 "Klicka på OK i det här fönstret, som visas första gången Inkscape öppnas. "
 "Vänta på att Inkscape ska öppnas. Det kan ta några minuter, eftersom "
-"Inkscape söker igenom alla teckensnittsfiler i ditt system. Nästa gång du "
+"Inkscape söker igenom alla typsnittsfiler i ditt system. Nästa gång du "
 "öppnar Inkscape tar det inte alls lika lång tid innan det dyker upp."
 
 #: ../../source/installing-on-mac.rst:138 72f785fd01ce4c50bd1e57194a0046da
