--- a/Inkscape/Inkscapes nybörjarguide/live-path-effects.po
+++ b/Inkscape/Inkscapes nybörjarguide/live-path-effects.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:41+0200\n"
+"PO-Revision-Date: 2025-05-16 08:41+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -32,45 +32,44 @@ msgid ""
 "paths."
 msgstr ""
 "**Live Path Effects** (eller LPEs) i Inkscape kan användas för att skapa "
-"nya spännande objekt från banor och grupper, utan att förstöra de "
-"ursprungliga banorna."
+"nya spännande objekt från slingor och grupper, utan att förstöra de "
+"ursprungliga slingorna."
 
 #: ../../source/live-path-effects.rst:9 afef68be43a84271aa482bebedd8a560
 msgid ""
-"They can be selected and adjusted in the :guilabel:`Path Effects` "
-"dialog, which you can access as :guilabel:`Path Effects` from the bottom "
-"of the :guilabel:`Path` menu entry."
+"They can be selected and adjusted in the :guilabel:`Path Effects` dialog, "
+"which you can access as :guilabel:`Path Effects` from the bottom of "
+"the :guilabel:`Path` menu entry."
 msgstr ""
-"De kan väljas och justeras i dialogrutan :guilabel:`Slingeffekter`, som "
-"du når genom att klicka på :guilabel:`Slingeffekter` längst ned "
+"De kan väljas och justeras i dialogrutan :guilabel:`Slingeffekter`, som du "
+"når genom att klicka på :guilabel:`Slingeffekter` längst ned "
 "i :guilabel:`Slinga`-menyn."
 
 #: ../../source/live-path-effects.rst:11 91223f70cf394ab086fdaf6b95e428f7
 msgid ""
 "Each type of path effect has its own, unique set of options in this "
-"dialog, and most of them can also be manipulated by dragging the "
-"effect's handles with the Node tool on canvas."
+"dialog, and most of them can also be manipulated by dragging the effect's "
+"handles with the Node tool on canvas."
 msgstr ""
-"Varje typ av baneffekt har sin egen, unika uppsättning alternativ i den "
+"Varje typ av slingeffekt har sin egen, unika uppsättning alternativ i den "
 "här dialogen, och de flesta av dem kan också manipuleras genom att dra "
 "effektens handtag med Node-verktyget på canvas."
 
 #: ../../source/live-path-effects.rst:13 9143a0cb41d14272bf0b8e91fe3a7efd
 msgid ""
-"Path effects can also be stacked. So you could, for example, first "
-"roughen the outline of a path, then arrange copies of the path around a "
-"circle, and then align dozens of those circles of the roughened paths in "
-"a grid."
+"Path effects can also be stacked. So you could, for example, first roughen "
+"the outline of a path, then arrange copies of the path around a circle, "
+"and then align dozens of those circles of the roughened paths in a grid."
 msgstr ""
-"Slingeffekter kan också staplas. Du kan t.ex. först rugga upp konturen "
-"av en slinga, sedan ordna kopior av slingan runt en cirkel och sedan "
-"placera dussintals av dessa cirklar av de ruggade slingorna i ett rutnät."
+"Slingeffekter kan också staplas. Du kan t.ex. först rugga upp konturen av "
+"en slinga, sedan ordna kopior av slingan runt en cirkel och sedan placera "
+"dussintals av dessa cirklar av de ruggade slingorna i ett rutnät."
 
 #: ../../source/live-path-effects.rst:15 1e2c3a48fd034a118aaa32e2d1ca3d99
 msgid ""
-"Since these effects are non-destructive, you can edit your original "
-"shape any time later, and all the stacked effects will automatically "
-"adjust to the changes."
+"Since these effects are non-destructive, you can edit your original shape "
+"any time later, and all the stacked effects will automatically adjust to "
+"the changes."
 msgstr ""
 "Eftersom effekterna är icke-destruktiva kan du redigera din ursprungliga "
 "form när som helst senare, och alla staplade effekter kommer automatiskt "
@@ -91,8 +90,8 @@ msgstr ""
 
 #: ../../source/live-path-effects.rst:22 70eff11e6dd349d581a7c3279c7b1ed5
 msgid ""
-"In the LPE dialog, click the arrow in the search field or start typing "
-"to see all available effects."
+"In the LPE dialog, click the arrow in the search field or start typing to "
+"see all available effects."
 msgstr ""
 "Klicka på pilen i sökfältet i LPE-dialogrutan eller börja skriva för att "
 "se alla tillgängliga effekter."
@@ -122,8 +121,8 @@ msgid ""
 "Here's a description of some of the available LPEs. Don't hesitate to "
 "discover the functionality of the others on your own:"
 msgstr ""
-"Här är en beskrivning av några av de tillgängliga LPE:erna. Tveka inte "
-"att upptäcka funktionaliteten hos de andra på egen hand:"
+"Här är en beskrivning av några av de tillgängliga LPE:erna. Tveka inte att "
+"upptäcka funktionaliteten hos de andra på egen hand:"
 
 #: ../../source/live-path-effects.rst:35 927bbe38f5bc4009bf1cccd0fdf6957f
 msgid "Bend"
@@ -131,12 +130,12 @@ msgstr "Böj"
 
 #: ../../source/live-path-effects.rst:36 1d159e7fcadc4c1caa694887b1dd105a
 msgid ""
-"This effect allows you to take any shape and bend it along a custom "
-"path. Useful for creating custom brushes or deforming objects on a path."
+"This effect allows you to take any shape and bend it along a custom path. "
+"Useful for creating custom brushes or deforming objects on a path."
 msgstr ""
-"Med den här effekten kan du ta vilken form som helst och böja den längs "
-"en anpassad slinga. Användbar för att skapa anpassade borstar eller "
-"deformera objekt på en slinga."
+"Med den här effekten kan du ta vilken form som helst och böja den längs en "
+"anpassad slinga. Användbar för att skapa anpassade borstar eller deformera "
+"objekt på en slinga."
 
 #: ../../source/live-path-effects.rst:38 95e293a88a144880aaef2aed505dbaa7
 msgid "Corners (Fillet/Chamfer)"
@@ -145,13 +144,12 @@ msgstr "Hörn (Fillet/Chamfer)"
 #: ../../source/live-path-effects.rst:39 b143b9538f4749219ec8d28061e9fbe0
 msgid ""
 "After you add this effect, you gain the ability to round any corner on "
-"your shape. You can round individual nodes by selecting them and "
-"dragging green handles on the canvas, or you can change values in the "
-"dialog."
+"your shape. You can round individual nodes by selecting them and dragging "
+"green handles on the canvas, or you can change values in the dialog."
 msgstr ""
-"När du har lagt till den här effekten får du möjlighet att runda alla "
-"hörn på din form. Du kan runda enskilda noder genom att markera dem och "
-"dra i gröna handtag på duken, eller så kan du ändra värden i dialogrutan."
+"När du har lagt till den här effekten får du möjlighet att runda alla hörn "
+"på din form. Du kan runda enskilda noder genom att markera dem och dra i "
+"gröna handtag på duken, eller så kan du ändra värden i dialogrutan."
 
 #: ../../source/live-path-effects.rst:41 0465904e8f3f4af6953100aa027d9e8d
 msgid "Hatches"
@@ -171,14 +169,14 @@ msgid ""
 "but the LPE approaches the topic differently. It will not create "
 "intermediate forms between two different objects, but only between parts "
 "of a single path. You need to combine two paths, so you have a path "
-"consisting of two sub-paths for this effect to work "
-"(:menuselection:`Path --> Combine` or :kbd:`Ctrl` + :kbd:`K`). Use the "
-"options to control the number of in-between steps and the trajectory "
-"along which blending will happen."
+"consisting of two sub-paths for this effect to work (:menuselection:`Path "
+"--> Combine` or :kbd:`Ctrl` + :kbd:`K`). Use the options to control the "
+"number of in-between steps and the trajectory along which blending will "
+"happen."
 msgstr ""
 "Principen är densamma som för tillägget :guilabel:`Interpolera`, men LPE "
 "närmar sig ämnet på ett annat sätt. Den skapar inte mellanformer mellan "
-"två olika objekt, utan bara mellan delar av en enda sökväg. Du måste "
+"två olika objekt, utan bara mellan delar av en enda slinga. Du måste "
 "kombinera två vägar, så att du har en väg som består av två underslingor "
 "för att denna effekt ska fungera (:menuselection:`Slinga --> Kombinera` "
 "eller :kbd:`Ctrl` + :kbd:`K`). Använd alternativen för att styra antalet "
@@ -193,8 +191,7 @@ msgid ""
 "Creates gaps in sections of a path, when they cross with another part of "
 "the path."
 msgstr ""
-"Skapar luckor i delar av en stig när de korsas med en annan del av "
-"stigen."
+"Skapar luckor i delar av en slinga när de korsas med en annan del av slingan."
 
 #: ../../source/live-path-effects.rst:50 75e350f23e4c4978abb01e565961fff6
 msgid "Mirror Symmetry"
@@ -203,12 +200,12 @@ msgstr "Spegelsymmetri"
 #: ../../source/live-path-effects.rst:51 06e4d90ca70b4cc8a949508b45921bd3
 msgid ""
 "This effect mirrors your drawing along an axis of your choice. You could "
-"try it when drawing symmetrical objects like faces, bottles, buildings, "
-"or butterflies."
+"try it when drawing symmetrical objects like faces, bottles, buildings, or "
+"butterflies."
 msgstr ""
-"Denna effekt speglar din ritning längs en axel som du själv väljer. Du "
-"kan prova den när du ritar symmetriska objekt som ansikten, flaskor, "
-"byggnader eller fjärilar."
+"Denna effekt speglar din ritning längs en axel som du själv väljer. Du kan "
+"prova den när du ritar symmetriska objekt som ansikten, flaskor, byggnader "
+"eller fjärilar."
 
 #: ../../source/live-path-effects.rst:53 d3f46427a53945beb344d754c99b6327
 msgid "Perspective / Envelope"
@@ -216,13 +213,13 @@ msgstr "Perspektiv/Kuvert"
 
 #: ../../source/live-path-effects.rst:54 134bb73ac7334c88ab7bf40cc6309fbd
 msgid ""
-"Seriously helpful for drawing in perspective, thanks to the addition of "
-"4 handles for the corners that can be moved around to make it look like "
-"a flat object is tilted in 3D space."
+"Seriously helpful for drawing in perspective, thanks to the addition of 4 "
+"handles for the corners that can be moved around to make it look like a "
+"flat object is tilted in 3D space."
 msgstr ""
-"Mycket användbart för perspektivritning tack vare 4 handtag för hörnen "
-"som kan flyttas runt för att få det att se ut som om ett platt objekt "
-"lutar i 3D-rymden."
+"Mycket användbart för perspektivritning tack vare 4 handtag för hörnen som "
+"kan flyttas runt för att få det att se ut som om ett platt objekt lutar i "
+"3D-rymden."
 
 #: ../../source/live-path-effects.rst:56 6034f59c503a45719d0736b967741fa4
 msgid "Stitch Sub-Paths"
@@ -230,11 +227,11 @@ msgstr "Sy ihop underslingor"
 
 #: ../../source/live-path-effects.rst:57 268d9ecb84c843de87c3ef149c54f554
 msgid ""
-"This effect is similar to Interpolate Sub-Paths, but it adds "
-"perpendicular lines between two paths."
+"This effect is similar to Interpolate Sub-Paths, but it adds perpendicular "
+"lines between two paths."
 msgstr ""
-"Denna effekt liknar Interpolate Sub-Paths, men den lägger till "
-"vinkelräta linjer mellan två banor."
+"Denna effekt liknar Interpolate Sub-Paths, men den lägger till vinkelräta "
+"linjer mellan två slingor."
 
 #: ../../source/live-path-effects.rst:59 9c7d74432dea4645bc03e822130df93e
 msgid "Pattern Along Path"
@@ -259,13 +256,13 @@ msgstr "Förskjutning"
 
 #: ../../source/live-path-effects.rst:63 926cd8c9a0684eb5b9c2ef5d75de1acf
 msgid ""
-"This effect changes the thickness of the whole object. You can change "
-"the offset (or inset, too!) with a specific value in a panel. Or you can "
-"drag on a round handle on the canvas just using your mouse."
+"This effect changes the thickness of the whole object. You can change the "
+"offset (or inset, too!) with a specific value in a panel. Or you can drag "
+"on a round handle on the canvas just using your mouse."
 msgstr ""
-"Denna effekt ändrar tjockleken på hela objektet. Du kan ändra "
-"förskjutning (eller inset också!) med ett specifikt värde i en panel. "
-"Eller så kan du dra i ett runt handtag på duken med hjälp av musen."
+"Denna effekt ändrar tjockleken på hela objektet. Du kan ändra förskjutning "
+"(eller inset också!) med ett specifikt värde i en panel. Eller så kan du "
+"dra i ett runt handtag på duken med hjälp av musen."
 
 #: ../../source/live-path-effects.rst:65 277f5d2594d540aca330c8477f7b7430
 msgid "Power Stroke"
@@ -273,8 +270,8 @@ msgstr "Power Stroke"
 
 #: ../../source/live-path-effects.rst:66 21f962805d854e1f9e22283af90e542e
 msgid ""
-"Adds handles that allow you to change the width of the path, so it can "
-"be different at different locations along the path."
+"Adds handles that allow you to change the width of the path, so it can be "
+"different at different locations along the path."
 msgstr ""
 "Lägger till handtag som gör att du kan ändra bredden på slingan, så att "
 "den kan vara olika på olika platser längs slingan."
@@ -302,8 +299,8 @@ msgid ""
 "This effect adds imperfections to your shapes to simulate a more organic "
 "drawing."
 msgstr ""
-"Denna effekt lägger till ojämnheter i dina former för att simulera en "
-"mer organisk ritning."
+"Denna effekt lägger till ojämnheter i dina former för att simulera en mer "
+"organisk ritning."
 
 #: ../../source/live-path-effects.rst:74 916e7c174277428d9e59d553fdd2d770
 msgid "Sketch"
@@ -315,7 +312,7 @@ msgid ""
 "with a pencil."
 msgstr ""
 "Omvandlar din slinga till flera linjer som ser ut som en skiss ritad med "
-"en penna."
+"en blyertspenna."
 
 #: ../../source/live-path-effects.rst:77 6dcd9d276b5e42c8861d62ec08855e79
 msgid "Tiling"
@@ -325,17 +322,16 @@ msgstr "Klinker"
 msgid ""
 "This is a very powerful tool for quickly creating and arranging many "
 "copies of an object. It offers options to control the number of clones/"
-"tiles in rows and columns, gaps between them, offsets, size and "
-"rotation. There are also 16 different tiling rules available for you to "
-"choose from. This is useful for creating patterns, grids, and other "
-"repeating elements."
+"tiles in rows and columns, gaps between them, offsets, size and rotation. "
+"There are also 16 different tiling rules available for you to choose from. "
+"This is useful for creating patterns, grids, and other repeating elements."
 msgstr ""
-"Detta är ett mycket kraftfullt verktyg för att snabbt skapa och "
-"arrangera många kopior av ett objekt. Det erbjuder alternativ för att "
-"styra antalet kloner/tiles i rader och kolumner, mellanrum mellan dem, "
-"förskjutningar, storlek och rotation. Det finns också 16 olika tiling-"
-"regler som du kan välja mellan. Detta är användbart för att skapa "
-"mönster, rutnät och andra upprepande element."
+"Detta är ett mycket kraftfullt verktyg för att snabbt skapa och arrangera "
+"många kopior av ett objekt. Det erbjuder alternativ för att styra antalet "
+"kloner/tiles i rader och kolumner, mellanrum mellan dem, förskjutningar, "
+"storlek och rotation. Det finns också 16 olika tiling-regler som du kan "
+"välja mellan. Detta är användbart för att skapa mönster, rutnät och andra "
+"upprepande element."
 
 #: ../../source/live-path-effects.rst:83 a026a080ddba4935bbce357e6d1c58c4
 msgid "Conclusion"
@@ -347,15 +343,14 @@ msgid ""
 "functionality to Inkscape and allow you to automate specific tasks."
 msgstr ""
 "Nu har vi tagit en liten rundtur bland många av de effekter som tillför "
-"funktionalitet till Inkscape och som gör att du kan automatisera "
-"specifika uppgifter."
+"funktionalitet till Inkscape och som gör att du kan automatisera specifika "
+"uppgifter."
 
 #: ../../source/live-path-effects.rst:87 c59db66b3dff4b7399e47e04720329a8
 msgid ""
-"This book is only an introduction to Inkscape. Do not hesitate to "
-"further explore the software once you feel at ease with its basic "
-"functionality."
+"This book is only an introduction to Inkscape. Do not hesitate to further "
+"explore the software once you feel at ease with its basic functionality."
 msgstr ""
 "Den här boken är endast en introduktion till Inkscape. Tveka inte att "
-"utforska programmet vidare när du känner dig bekväm med dess "
-"grundläggande funktioner."
+"utforska programmet vidare när du känner dig bekväm med dess grundläggande "
+"funktioner."
