--- a/Inkscape/Inkscapes nybörjarguide/managing-workspace.po
+++ b/Inkscape/Inkscapes nybörjarguide/managing-workspace.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:27+0200\n"
+"PO-Revision-Date: 2025-05-16 09:16+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -43,11 +43,11 @@ msgstr ""
 "Som standard skapar Inkscape dokument i en storlek som passar ditt "
 "operativsystems språk (det vill säga, i USA får du ett annat "
 "standarddokument än i Tyskland, till exempel). Du ändrar sidstorleken "
-"genom att klicka på :menuselection:`File --> Document Properties...` "
+"genom att klicka på :menuselection:`Arkiv --> Dokumentegenskaper...` "
 "(eller klicka på den näst sista ikonen i kommandofältet, som ser ut som |"
 "image0|, eller använd kortkommandot :kbd:`Shift` + :kbd:`Ctrl` "
-"+ :kbd:`D`). I avsnittet :guilabel:`Page Size` på "
-"fliken :guilabel:`Page` kan du välja eller definiera den storlek du vill "
+"+ :kbd:`D`). I avsnittet :guilabel:`Sidstorlek` på "
+"fliken :guilabel:`Sida` kan du välja eller definiera den storlek du vill "
 "ha."
 
 #: ../../source/managing-workspace.rst:64 383ab9e390e54858ba83203095bf054e
