--- a/Inkscape/Inkscapes nybörjarguide/markers.po
+++ b/Inkscape/Inkscapes nybörjarguide/markers.po
@@ -45,8 +45,8 @@ msgid ""
 "path."
 msgstr ""
 "Markörerna kommer att placeras exakt på slingans noder. Startmarkören "
-"kommer att visas på stigens första nod, mittmarkörerna på varje nod "
-"längs stigen och slutmarkören på stigens sista nod."
+"kommer att visas på slingans första nod, mittmarkörerna på varje nod "
+"längs slingan och slutmarkören på slingans sista nod."
 
 #: ../../source/markers.rst:15 4bb8e90e415b401b9bbe1db03a8bee44
 msgid ""
