--- a/Inkscape/Inkscapes nybörjarguide/node-operations.po
+++ b/Inkscape/Inkscapes nybörjarguide/node-operations.po
@@ -59,9 +59,9 @@ msgid ""
 "multiple nodes, then use this button. More nodes allow you to more precisely "
 "determine the shape of a path."
 msgstr ""
-"Genom att dubbelklicka på ett bansegment kan du enkelt lägga till nya noder "
+"Genom att dubbelklicka på ett slingsegment kan du enkelt lägga till nya noder "
 "direkt på skärmen. Om du behöver lägga till fler noder eller om du vill infoga "
-"en nod mitt emellan två andra noder kan du klicka på bansegmentet eller välja "
+"en nod mitt emellan två andra noder kan du klicka på slingsegmentet eller välja "
 "flera noder och sedan använda den här knappen. Fler noder gör att du kan "
 "bestämma formen på en slinga mer exakt."
 
@@ -98,7 +98,7 @@ msgid ""
 "well as possible."
 msgstr ""
 "Välj minst två noder. När du klickar på knappen kommer noderna att slås samman "
-"till en enda nod. Inkscape kommer att försöka bevara stigens form så bra som "
+"till en enda nod. Inkscape kommer att försöka bevara slingans form så bra som "
 "möjligt."
 
 #: ../../source/node-operations.rst:28 60781071e6e7409e8c1720877600b32d
@@ -156,7 +156,7 @@ msgstr "Ikon för att ta bort ett segment mellan två noder"
 
 #: ../../source/node-operations.rst:38 a32cf85ff2a6416284d72a7327af2fa7
 msgid "Breaks a path in two, leaving a gap."
-msgstr "Bryter en stig i två delar och lämnar en lucka."
+msgstr "Bryter en slinga i två delar och lämnar en lucka."
 
 #: ../../source/node-operations.rst:40 80f5bc6256014f4d98a40f87e52937f4
 msgid ""
@@ -199,7 +199,7 @@ msgstr "|Icon for converting objects to paths| Konvertera objekt till slingor"
 
 #: ../../source/node-operations.rst:126 8f83d75e887e4a51addb814f74043e68
 msgid "Icon for converting objects to paths"
-msgstr "Ikon för konvertering av objekt till banor"
+msgstr "Ikon för konvertering av objekt till slingor"
 
 #: ../../source/node-operations.rst:47 edfb2892efaf454d8bcf05229c91f28c
 msgid ""
@@ -215,7 +215,7 @@ msgstr "|Icon for converting strokes to paths| Konvertera stroke till path"
 
 #: ../../source/node-operations.rst:128 1ec799b1c4ff47a1956ab07dfe284605
 msgid "Icon for converting strokes to paths"
-msgstr "Ikon för konvertering av streck till banor"
+msgstr "Ikon för konvertering av streck till slingor"
 
 #: ../../source/node-operations.rst:50 8e280b59771445f99f537f164d313c87
 msgid "Convert strokes of objects into separate objects"
@@ -235,7 +235,7 @@ msgid ""
 "These buttons determine if certain path properties will be editable and "
 "visible on the canvas:"
 msgstr ""
-"Dessa knappar avgör om vissa banegenskaper ska vara redigerbara och synliga på "
+"Dessa knappar avgör om vissa slingegenskaper ska vara redigerbara och synliga på "
 "duken:"
 
 #: ../../source/node-operations.rst:59 e82fc03167404ebeacde87d7bc88682d
