--- a/Inkscape/Inkscapes nybörjarguide/node-types.po
+++ b/Inkscape/Inkscapes nybörjarguide/node-types.po
@@ -125,7 +125,7 @@ msgstr "Byt till **Nodverktyg** genom att klicka på dess ikon."
 
 #: ../../source/node-types.rst:31 fd391b651be14f51880fb2c52641f9da
 msgid "Click on the path you want to modify."
-msgstr "Klicka på den sökväg som du vill ändra."
+msgstr "Klicka på den slinga som du vill ändra."
 
 #: ../../source/node-types.rst:32 c049721c01924fba9015c4e80ea62cf1
 msgid ""
