--- a/Inkscape/Inkscapes nybörjarguide/objects-to-paths.po
+++ b/Inkscape/Inkscapes nybörjarguide/objects-to-paths.po
@@ -45,14 +45,14 @@ msgid ""
 msgstr ""
 "Former kan endast ändras genom att dra i deras specifika handtag. I "
 "motsats till former redigerar du en slinga med verktyg som är avsedda för "
-"att modifiera banor."
+"att modifiera slingor."
 
 #: ../../source/objects-to-paths.rst:12 873e0157faf643c7903c3e43e4594752
 msgid ""
 "However, **shapes can be converted into paths**, so the path tools can "
 "then be used with them."
 msgstr ""
-"Men **former kan konverteras till banor**, så att banverktygen kan "
+"Men **former kan konverteras till slingor**, så att slingverktygen kan "
 "användas med dem."
 
 #: ../../source/objects-to-paths.rst:15 75c1df59594a4acfb2a6515c11b3eacc
@@ -65,7 +65,7 @@ msgstr "Markera formen med Selector-verktyget."
 
 #: ../../source/objects-to-paths.rst:18 81cc4e7e1d274db28a6d0762a5c1b37b
 msgid "In the menu, select :menuselection:`Path --> Object to path`."
-msgstr "I menyn väljer du :menuselection:`Sökväg --> Objekt till sökväg`."
+msgstr "I menyn väljer du :menuselection:`Slinga --> Objekt till slinga`."
 
 #: ../../source/objects-to-paths.rst:21 b8fabe2779fd43c2ac57259732a447d1
 msgid ""
