--- a/Inkscape/Inkscapes nybörjarguide/palette.po
+++ b/Inkscape/Inkscapes nybörjarguide/palette.po
@@ -124,7 +124,7 @@ msgid ""
 "path indicated under :guilabel:`User palettes`."
 msgstr ""
 "Kontrollera sedan var Inkscape letar efter anpassade palettfiler. För detta, "
-"gå till :menuselection:`Edit --> Preferences --> System`, och notera sökvägen "
+"gå till :menuselection:`Edit --> Preferences --> System`, och notera slingan "
 "som anges under :guilabel:`User palettes`."
 
 #: ../../source/palette.rst:46 cdc3e925e16e4ff6912b25e0d9080db2
