--- a/Inkscape/Inkscapes nybörjarguide/pen-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/pen-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:22+0200\n"
+"PO-Revision-Date: 2025-05-16 08:43+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -48,7 +48,7 @@ msgid ""
 "This tool's purpose is to draw paths. Multiple paths, drawn next to and on "
 "top of each other, form a design. For a start:"
 msgstr ""
-"Syftet med detta verktyg är att rita banor. Flera banor, som ritas bredvid "
+"Syftet med detta verktyg är att rita slingor. Flera slingor, som ritas bredvid "
 "och ovanpå varandra, bildar en design. Till att börja med:"
 
 #: ../../source/pen-tool.rst:14 3d7572d935774053923c1cc78d069ede
@@ -105,20 +105,20 @@ msgid ""
 "position the nodes, later, you can use the node tool to modify the path."
 msgstr ""
 "Den första metoden är predestinerad för att skapa exakta ritningar. Först "
-"positionerar du noderna, sedan kan du använda nodverktyget för att "
-"modifiera slingan."
+"positionerar du noderna, sedan kan du använda nodverktyget för att modifiera "
+"slingan."
 
 #: ../../source/pen-tool.rst:35 fbe195c3309e433dbacacb57dc2db488
 msgid ""
 "You'll be able to choose from several modes: Bézier, Spiro, BSpline, "
-"straight lines, paraxial (= only strictly parallel and perpendicular). "
-"Then, there is the :guilabel:`Shape` option that you have already learnt "
-"about in the chapter about the :doc:`Pencil tool <pencil-tool>`."
+"straight lines, paraxial (= only strictly parallel and perpendicular). Then, "
+"there is the :guilabel:`Shape` option that you have already learnt about in "
+"the chapter about the :doc:`Pencil tool <pencil-tool>`."
 msgstr ""
 "Du kommer att kunna välja mellan flera lägen: Bézier, Spiro, BSpline, raka "
 "linjer, paraxial (= endast strikt parallell och vinkelrät). Sedan finns "
 "det :guilabel:`Shape`-alternativet som du redan har lärt dig om i kapitlet "
-"om :doc:`Pencil tool <pencil-tool>`."
+"om :doc:`Blyertsverktyget <pencil-tool>`."
 
 #: ../../source/pen-tool.rst:41 0285ab12edc04c51addae8570e5954fe
 msgid ""
@@ -153,8 +153,8 @@ msgid ""
 "Creating the rough shape with the Pen tool, without thinking too much about "
 "any curves. The nodes are represented as grey diamonds."
 msgstr ""
-"Skapar den grova formen med Pen-verktyget, utan att tänka så mycket på "
-"några kurvor. Noderna representeras av grå diamanter."
+"Skapar den grova formen med Pen-verktyget, utan att tänka så mycket på några "
+"kurvor. Noderna representeras av grå diamanter."
 
 #: ../../source/pen-tool.rst:63 c9c7ebf68ad14a56b1743b531a3809f7
 msgid "Nodes have been aligned"
@@ -189,5 +189,5 @@ msgid ""
 "Some final adjustments have been made, to achieve a nice result. The image "
 "now resembles an open book."
 msgstr ""
-"Några slutliga justeringar har gjorts för att uppnå ett bra resultat. "
-"Bilden ser nu ut som en öppen bok."
+"Några slutliga justeringar har gjorts för att uppnå ett bra resultat. Bilden "
+"ser nu ut som en öppen bok."
