--- a/Inkscape/Inkscapes nybörjarguide/putting-text-on-path.po
+++ b/Inkscape/Inkscapes nybörjarguide/putting-text-on-path.po
@@ -50,7 +50,7 @@ msgstr "image0"
 #: ../../source/putting-text-on-path.rst:12 f855c8b9cdc34203ae7982c434831c30
 msgid "To make a text that follows a path's curvature, you need to do this:"
 msgstr ""
-"För att skapa en text som följer en stigs krökning måste du göra så här:"
+"För att skapa en text som följer en slingas krökning måste du göra så här:"
 
 #: ../../source/putting-text-on-path.rst:14 9139af9332a44d20859cf4d9e9fc7312
 msgid ""
@@ -62,7 +62,7 @@ msgstr ""
 "Skapa en slinga som ska fungera som baslinje för orden och bokstäverna i "
 "texten. Slingan kan skapas med hjälp av formverktygen och genom att "
 "kombinera former med booleska operationer, eller genom att rita den "
-"direkt med något av de verktyg som ritar banor."
+"direkt med något av de verktyg som ritar slingor."
 
 #: ../../source/putting-text-on-path.rst:18 5a9a563cbe094c9b95602448da36de20
 msgid ""
@@ -88,7 +88,7 @@ msgid ""
 "do the work by selecting :menuselection:`Text --> Put on Path` from the "
 "menu."
 msgstr ""
-"Markera sökvägen och texten med Selector-verktyget. Låt sedan Inkscape "
+"Markera slingan och texten med Selector-verktyget. Låt sedan Inkscape "
 "göra jobbet genom att välja :menuselection:`Text --> Put on Path` från "
 "menyn."
 
@@ -149,5 +149,5 @@ msgid ""
 "… and put the text on the path using :menuselection:`Text --> Put on "
 "Path`."
 msgstr ""
-"... och lägg texten på stigen med hjälp av :menuselection:`Text --> Lägg "
+"... och lägg texten på slingan med hjälp av :menuselection:`Text --> Lägg "
 "på slinga`."
