--- a/Inkscape/Inkscapes nybörjarguide/selector-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/selector-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:58+0200\n"
+"PO-Revision-Date: 2025-05-16 09:14+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,14 +31,14 @@ msgstr "|Icon for Selector| :kbd:`F1` eller :kbd:`S`"
 
 #: ../../source/selector-tool.rst:111 a53ca85aef8d4f80b44e4e34c3193cfe
 msgid "Icon for Selector"
-msgstr "Ikon för väljare"
+msgstr "Ikon för Väljare"
 
 #: ../../source/selector-tool.rst:7 dfc38a3b31f4443cbe576a03a8e1fe61
 msgid ""
 "The Selector tool is a fundamental tool in the program, since almost "
 "everything must be selected before it can be edited."
 msgstr ""
-"Selector-verktyget är ett grundläggande verktyg i programmet, eftersom "
+"Väljare-verktyget är ett grundläggande verktyg i programmet, eftersom "
 "nästan allt måste markeras innan det kan redigeras."
 
 #: ../../source/selector-tool.rst:10 dff49e66c6ec46caac5fe4403456af5c
@@ -46,7 +46,7 @@ msgid ""
 "Working much like a hand, the Selector tool also **moves, scales, skews "
 "and rotates** objects."
 msgstr ""
-"Selector-verktyget fungerar ungefär som en hand och kan också **flyttar, "
+"Väljare-verktyget fungerar ungefär som en hand och kan också **flyttar, "
 "skalar, skevar och roterar** objekt."
 
 #: ../../source/selector-tool.rst:13 76253f215bc2452e88e499a5e48e63e8
@@ -163,8 +163,8 @@ msgid ""
 "In some cases, you want to edit more than one object at once. So the "
 "Select tool can select more than one object at once."
 msgstr ""
-"I vissa fall vill du redigera mer än ett objekt på en gång. Då kan "
-"Select-verktyget välja mer än ett objekt samtidigt."
+"I vissa fall vill du redigera mer än ett objekt på en gång. Då kan Välj-"
+"verktyget välja mer än ett objekt samtidigt."
 
 #: ../../source/selector-tool.rst:61 f71b3326da634cbd8fc814b07b6a5e6c
 msgid "To select more than one object, there are mainly two ways:"
