--- a/Inkscape/Inkscapes nybörjarguide/shape-tools.po
+++ b/Inkscape/Inkscapes nybörjarguide/shape-tools.po
@@ -34,10 +34,10 @@ msgid ""
 "operations and path tools are detailed in later sections."
 msgstr ""
 "Geometriska former, trots sitt enkla utseende, är användbara för många "
-"ritningstekniker (och inte bara vektorritning). Med banoperationer (Union, "
+"ritningstekniker (och inte bara vektorritning). Med slingoperationer (Union, "
 "Difference, etc...) kan du snabbt få fantastiska resultat från några "
 "elementära former. Du kan till och med förbättra det ytterligare med "
-"banverktyg. Både banoperationer och banverktyg beskrivs i detalj i senare "
+"slingverktyg. Både slingoperationer och slingverktyg beskrivs i detalj i senare "
 "avsnitt."
 
 #: ../../source/shape-tools.rst:11 4cc239f9c76c4e29b4c8ba08ce2e6eb4
