--- a/Inkscape/Inkscapes nybörjarguide/strokes.po
+++ b/Inkscape/Inkscapes nybörjarguide/strokes.po
@@ -138,4 +138,4 @@ msgstr "Streck: sammanfogningstyper"
 
 #: ../../source/strokes.rst:61 b198057c5ffd4d27b948e258ca5a98e8
 msgid "The 3 different types of line joins."
-msgstr "De 3 olika typerna av linjeförband."
+msgstr "De 3 olika typerna av linjeförslingd."
