--- a/Inkscape/Inkscapes nybörjarguide/styling-text.po
+++ b/Inkscape/Inkscapes nybörjarguide/styling-text.po
@@ -35,7 +35,7 @@ msgstr ""
 
 #: ../../source/styling-text.rst:59 bee2cc10270f44c8aba38762a0a9bda2
 msgid "Text and Font"
-msgstr "Teckensnitt för text"
+msgstr "Typsnitt för text"
 
 #: ../../source/styling-text.rst:7 45c3d943bb824ff88688298aadac6316
 msgid ""
@@ -50,11 +50,11 @@ msgstr ""
 #: ../../source/styling-text.rst:11 ebecb38edc5e41fe9f45eecf02636da6
 msgid "a field with a list of the fonts that are installed on your computer"
 msgstr ""
-"ett fält med en lista över de teckensnitt som är installerade på din dator"
+"ett fält med en lista över de typsnitt som är installerade på din dator"
 
 #: ../../source/styling-text.rst:13 2d047ab50d464784a7d7458f9cedb4a3
 msgid "the font style (bold, italic, condensed, regular etc.)"
-msgstr "teckensnittsstil (fet, kursiv, kondenserad, vanlig etc.)"
+msgstr "typsnittsstil (fet, kursiv, kondenserad, vanlig etc.)"
 
 #: ../../source/styling-text.rst:14 f294ff2d188541278b3c69cfb437b8fb
 msgid "the font size"
@@ -113,10 +113,10 @@ msgid ""
 "while you are working on a drawing, you need to close all Inkscape "
 "windows and restart the program to be able to select the new font."
 msgstr ""
-"Inkscape levereras inte med några teckensnitt. Du kan välja bland dem som "
-"du har installerat på ditt system. Om du installerar ett nytt teckensnitt "
+"Inkscape levereras inte med några typsnitt. Du kan välja bland dem som "
+"du har installerat på ditt system. Om du installerar ett nytt typsnitt "
 "medan du arbetar med en teckning måste du stänga alla Inkscape-fönster "
-"och starta om programmet för att kunna välja det nya teckensnittet."
+"och starta om programmet för att kunna välja det nya typsnittet."
 
 #: ../../source/styling-text.rst:35 a0951df136d84b18829817c00055f4bb
 msgid ""
@@ -124,7 +124,7 @@ msgid ""
 "certain fonts, like :term:`ligatures <Ligature>`."
 msgstr ""
 "På fliken :guilabel:`Variants` kan du aktivera specifika egenskaper hos "
-"vissa teckensnitt, som :term:`ligaturer <Ligature>`."
+"vissa typsnitt, som :term:`ligaturer <Ligature>`."
 
 #: ../../source/styling-text.rst:38 12a1a2cd730648c8b9e790c0e36606c6
 msgid ""
