--- a/Inkscape/Inkscapes nybörjarguide/text.po
+++ b/Inkscape/Inkscapes nybörjarguide/text.po
@@ -43,9 +43,9 @@ msgid ""
 "You can also make interesting modifications such as making a text follow "
 "the course of a path or flowing it into an irregularly-shaped frame."
 msgstr ""
-"Du kan när som helst ändra teckensnitt, teckenstorlek och färg på "
+"Du kan när som helst ändra typsnitt, teckenstorlek och färg på "
 "texten. Du kan också göra intressanta ändringar som att få en text att "
-"följa en stig eller att få den att flyta in i en oregelbundet formad ram."
+"följa en slinga eller att få den att flyta in i en oregelbundet formad ram."
 
 #: ../../source/text.rst:9 0547a9e5a2424d7dbb9b011f482737b2
 msgid ""
@@ -63,6 +63,6 @@ msgid ""
 "the result, in a preview that updates as you type!"
 msgstr ""
 "Typografer kommer att uppskatta möjligheten att skapa :term:`SVG-"
-"teckensnitt <SVG Font>` med Inkscape. Den dedikerade dialogrutan gör att "
+"typsnitt <SVG Font>` med Inkscape. Den dedikerade dialogrutan gör att "
 "du direkt kan se resultatet, i en förhandsgranskning som uppdateras "
 "medan du skriver!"
