--- a/Inkscape/Inkscapes nybörjarguide/tweak-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/tweak-tool.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 "Tweak-verktyget är det perfekta verktyget för illustratörer som först "
 "ritar sina mönster på papper och sedan skannar och vektoriserar sitt "
-"arbete. Med det kan du ändra banor på duken med hjälp av många "
+"arbete. Med det kan du ändra slingor på duken med hjälp av många "
 "alternativ utan att någonsin byta verktyg."
 
 #: ../../source/tweak-tool.rst:12 6dbda9791f794db4a63e16bf0f8676ac
@@ -149,8 +149,8 @@ msgid ""
 "Reduces the size of the paths, or, when you hold down :kbd:`Shift`, "
 "enlarges the paths."
 msgstr ""
-"Minskar storleken på banorna eller, om du håller ned :kbd:`Shift`, "
-"förstorar banorna."
+"Minskar storleken på slingorna eller, om du håller ned :kbd:`Shift`, "
+"förstorar slingorna."
 
 #: ../../source/tweak-tool.rst:40 908fc3af46bd47eea0ce4dd0d1131a1f
 msgid "|Icon for rotating objects with Tweak Tool| Rotate"
@@ -178,7 +178,7 @@ msgid ""
 "above the originals, so remember to move them, if you want to see the "
 "effect."
 msgstr ""
-"Skapar duplikat av de markerade banorna. Dessa kommer att placeras "
+"Skapar duplikat av de markerade slingorna. Dessa kommer att placeras "
 "direkt ovanför originalen, så kom ihåg att flytta dem om du vill se "
 "effekten."
 
@@ -189,12 +189,12 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:93 8fc0c8446c82494b81ce50c038399595
 msgid "Icon for pushing path parts with Tweak Tool"
-msgstr "Ikon för att flytta bandelar med Tweak Tool"
+msgstr "Ikon för att flytta slingdelar med Tweak Tool"
 
 #: ../../source/tweak-tool.rst:48 5f6613e49dd74140a52d6c6dfae3726a
 msgid "Deforms the paths by pushing the nodes like a snow shovel."
 msgstr ""
-"Deformerar banorna genom att trycka på noderna som med en snöskyffel."
+"Deformerar slingorna genom att trycka på noderna som med en snöskyffel."
 
 #: ../../source/tweak-tool.rst:50 cc2d4fda5d7f4b388b38d27eb447dc64
 msgid ""
@@ -206,7 +206,7 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:95 e1ae22ebfd2a40ae9bc82f2c11d68ff1
 msgid "Icon for shrinking parts of paths with Tweak Tool"
-msgstr "Ikon för att krympa delar av banor med Tweak Tool"
+msgstr "Ikon för att krympa delar av slingor med Tweak Tool"
 
 #: ../../source/tweak-tool.rst:97 1be5390daf114f2e97c405acc5d0a92a
 msgid "Icon for growing parts of paths with Tweak Tool"
@@ -228,7 +228,7 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:99 18dd50800eca4178a93283ff50dc53a1
 msgid "Icon for roughening paths with Tweak Tool"
-msgstr "Ikon för uppruggning av banor med Tweak Tool"
+msgstr "Ikon för uppruggning av slingor med Tweak Tool"
 
 #: ../../source/tweak-tool.rst:55 bfd7dde1e3f6413eb5539f1d639b9e49
 msgid "Roughens the contours of a path."
@@ -252,7 +252,7 @@ msgstr "Ikon för att slumpa fram färger på objekt med Tweak Tool"
 
 #: ../../source/tweak-tool.rst:58 b8cb3dda3c4743d3a31bdd7b77b26bba
 msgid "These modes modify the color of the paths."
-msgstr "Dessa lägen ändrar färgen på banorna."
+msgstr "Dessa lägen ändrar färgen på slingorna."
 
 #: ../../source/tweak-tool.rst:60 f5e5be80bb6c4f85b205edebebcb2bde
 msgid "|Icon for blurring objects with Tweak Tool| Blur objects"
@@ -264,7 +264,7 @@ msgstr "Ikon för att göra objekt suddiga med Tweak Tool"
 
 #: ../../source/tweak-tool.rst:61 249a2f10f0cf4bcfa75df1cb1067fd6d
 msgid "Adds blur to the paths."
-msgstr "Lägger till oskärpa i banorna."
+msgstr "Lägger till oskärpa i slingorna."
 
 #: ../../source/tweak-tool.rst:63 d840151bc315476c9643c9855f852113
 msgid "|Chameleon image to be tweaked|"
