--- a/Inkscape/Inkscapes nybörjarguide/writing-text.po
+++ b/Inkscape/Inkscapes nybörjarguide/writing-text.po
@@ -103,7 +103,7 @@ msgid ""
 msgstr ""
 "Texten kommer inte att sträckas ut eller växa för att fylla det tilldelade "
 "utrymmet till varje pris. Det är upp till dig att anpassa storleken på "
-"området eller teckensnittet efter dina behov."
+"området eller typsnittet efter dina behov."
 
 #: ../../source/writing-text.rst:32 04436ccb4b414e17bedf01353d231539
 msgid "Writing text directly to the canvas"
