--- a/Inkscape/Inkscapes nybörjarguide/ordering-markers-stroke-and-fill.po
+++ b/Inkscape/Inkscapes nybörjarguide/ordering-markers-stroke-and-fill.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:21+0200\n"
+"PO-Revision-Date: 2025-05-16 09:15+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -24,7 +24,7 @@ msgstr ""
 #: ../../source/ordering-markers-stroke-and-fill.rst:3
 #: 5d1e96f751f74bf0beeb4900ea853a5b
 msgid "Ordering Markers, Stroke and Fill"
-msgstr "Beställning av markörer, streck och fyllning"
+msgstr "Ordning för markörer, streck och fyllning"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:5
 #: 9b4ce29d2c8f46aeb9cb56c8bad0d594
@@ -60,7 +60,7 @@ msgstr "Ikoner för markörordning"
 #: ../../source/ordering-markers-stroke-and-fill.rst:18
 #: 845c4a8bf97a4c38b78e0c4f6003698b
 msgid "The available marker orders’ icons"
-msgstr "Ikoner för tillgängliga markörorder"
+msgstr "Ikoner för tillgänglig markörordning"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:20
 #: 59df5ba0cf4d4b6785162f4cac6e5d05
@@ -95,7 +95,7 @@ msgstr "[överst] stroke > markör > fyllning [nederst]"
 #: ../../source/ordering-markers-stroke-and-fill.rst:38
 #: 5a382526fada4c0382903cff1a018b37
 msgid "Marker order: stroke > fill > markers"
-msgstr "Markeringsordning: stroke > fill > markers"
+msgstr "Markörordning: stroke > fill > markers"
 
 #: ../../source/ordering-markers-stroke-and-fill.rst:42
 #: 4dfd152eed3d4622bf03e74eaa0b297d
