--- a/Inkscape/Inkscapes nybörjarguide/pencil-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/pencil-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:41+0200\n"
+"PO-Revision-Date: 2025-05-16 08:43+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/pencil-tool.rst:3 f28e4d08c53543dda6a01b09a5da15ca
 msgid "The Pencil Tool"
-msgstr "Pennverktyget"
+msgstr "Blyertsverktyget"
 
 #: ../../source/pencil-tool.rst:5 9069c4efab4244159752225af1464058
 msgid "|Icon for Pencil Tool| :kbd:`F6` or :kbd:`P`"
@@ -31,28 +31,28 @@ msgstr "|Icon for Pencil Tool| :kbd:`F6` or :kbd:`P`"
 
 #: ../../source/pencil-tool.rst:152 1e6afc301656484bb7349ae41aae8c92
 msgid "Icon for Pencil Tool"
-msgstr "Ikon för pennverktyg"
+msgstr "Ikon för blyertsverktyg"
 
 #: ../../source/pencil-tool.rst:7 7cbee27ae8174c72ab30b24b27d067b5
 msgid ""
-"The behavior of the Pencil tool depends on the settings in its controls bar. "
-"To draw with this tool, press the left mouse button and drag the mouse around "
-"the canvas. The Pencil will leave a green trace that follows the location of "
-"the mouse cursor. When you let go of the mouse button, the shape you created "
-"will get its stroke (and/or its fill, if you have one set)."
+"The behavior of the Pencil tool depends on the settings in its controls bar. To "
+"draw with this tool, press the left mouse button and drag the mouse around the "
+"canvas. The Pencil will leave a green trace that follows the location of the "
+"mouse cursor. When you let go of the mouse button, the shape you created will "
+"get its stroke (and/or its fill, if you have one set)."
 msgstr ""
-"Hur verktyget Pencil fungerar beror på inställningarna i dess kontrollfält. "
-"För att rita med detta verktyg trycker du på vänster musknapp och drar musen "
-"runt målarduken. Pencil lämnar ett grönt spår som följer muspekarens position. "
-"När du släpper musknappen får den form du skapade sitt streck (och/eller sin "
-"fyllning, om du har ställt in en sådan)."
+"Hur verktyget Blyertspenna fungerar beror på inställningarna i dess "
+"kontrollfält. För att rita med detta verktyg trycker du på vänster musknapp och "
+"drar musen runt målarduken. Pencil lämnar ett grönt spår som följer muspekarens "
+"position. När du släpper musknappen får den form du skapade sitt streck (och/"
+"eller sin fyllning, om du har ställt in en sådan)."
 
 #: ../../source/pencil-tool.rst:14 f35a6c44921e4b2cb1f6c0b63b502134
 msgid ""
-"Two tiny, square handles appear at the start and end of the drawn path. When "
-"you start drawing on one of these handles, this will continue the path, "
-"instead of creating a new object.  And if you stop drawing the same path in "
-"one of those squares, it will close the path (meaning there are no openings)."
+"Two tiny, square handles appear at the start and end of the drawn path. When you "
+"start drawing on one of these handles, this will continue the path, instead of "
+"creating a new object.  And if you stop drawing the same path in one of those "
+"squares, it will close the path (meaning there are no openings)."
 msgstr ""
 "Två små, fyrkantiga handtag visas i början och slutet av den ritade slingan. När "
 "du börjar rita på ett av dessa handtag fortsätter slingan istället för att skapa "
@@ -64,9 +64,8 @@ msgid ""
 "Let's have a look at the options of the Pencil tool. The :guilabel:`Shape` "
 "dropdown menu offers different brushes that influence the shape of the path:"
 msgstr ""
-"Låt oss ta en titt på alternativen för Pencil-verktyget. I "
-"rullgardinsmenyn :guilabel:`Form` finns olika penslar som påverkar slingans "
-"form:"
+"Låt oss ta en titt på alternativen för Blyertspenna-verktyget. I "
+"rullgardinsmenyn :guilabel:`Form` finns olika penslar som påverkar slingans form:"
 
 #: ../../source/pencil-tool.rst:23 90101786261b49f1a1912e7b7be46cb9
 msgid "Triangle in and out"
@@ -74,9 +73,9 @@ msgstr "Triangel in och ut"
 
 #: ../../source/pencil-tool.rst:24 2bed438def6942ad8195d3e18b684f00
 msgid ""
-"This makes the path look a little more elegant, thinning or thickening along "
-"its length. Switch to the Node tool and drag on the pink diamond-shaped handle "
-"to adjust the width interactively."
+"This makes the path look a little more elegant, thinning or thickening along its "
+"length. Switch to the Node tool and drag on the pink diamond-shaped handle to "
+"adjust the width interactively."
 msgstr ""
 "Detta gör att slingan ser lite mer elegant ut och blir tunnare eller tjockare "
 "längs dess längd. Byt till Nodverktyget och dra i det rosa diamantformade "
@@ -102,9 +101,9 @@ msgstr "Från urklipp"
 
 #: ../../source/pencil-tool.rst:34 ed77f37c6502447eb8ad4896c4fa9c95
 msgid ""
-"You can make custom brushes by first drawing your brush shape, and then "
-"copying it. This will add it to the clipboard automatically and can be used as "
-"a brush for the pencil and pen tools."
+"You can make custom brushes by first drawing your brush shape, and then copying "
+"it. This will add it to the clipboard automatically and can be used as a brush "
+"for the pencil and pen tools."
 msgstr ""
 "Du kan skapa egna penslar genom att först rita penselformen och sedan kopiera "
 "den. Då läggs den automatiskt till i urklippet och kan användas som pensel för "
@@ -116,13 +115,13 @@ msgstr "Böj från urklipp"
 
 #: ../../source/pencil-tool.rst:40 6f0229f1045d48a0a2a85051fa523404
 msgid ""
-"First you must copy a curve that already exists. The line that you draw will "
-"be deformed like the path that you copied. And it will be adjustable, using "
-"the Node tool."
+"First you must copy a curve that already exists. The line that you draw will be "
+"deformed like the path that you copied. And it will be adjustable, using the "
+"Node tool."
 msgstr ""
-"Först måste du kopiera en kurva som redan finns. Linjen som du ritar kommer "
-"att deformeras som den slinga som du kopierade. Och den kommer att vara "
-"justerbar med hjälp av Nodverktyget."
+"Först måste du kopiera en kurva som redan finns. Linjen som du ritar kommer att "
+"deformeras som den slinga som du kopierade. Och den kommer att vara justerbar "
+"med hjälp av Nodverktyget."
 
 #: ../../source/pencil-tool.rst:44 411b779e4bad40a2a0ba8e5999daa271
 msgid "Last applied"
@@ -130,15 +129,15 @@ msgstr "Senast tillämpad"
 
 #: ../../source/pencil-tool.rst:45 3120d3f849c94589ac458226b4e525d8
 msgid ""
-"Use the same shape you used last time. Use this if you want to continue using "
-"a custom shape, for drawing multiple lines with the same style. This way, you "
-"can go back to using the clipboard normally. It does no longer have to hold "
-"the shape you want to draw."
+"Use the same shape you used last time. Use this if you want to continue using a "
+"custom shape, for drawing multiple lines with the same style. This way, you can "
+"go back to using the clipboard normally. It does no longer have to hold the "
+"shape you want to draw."
 msgstr ""
-"Använd samma form som du använde förra gången. Använd detta om du vill "
-"fortsätta att använda en anpassad form för att rita flera linjer med samma "
-"stil. På så sätt kan du återgå till att använda urklippet normalt. Det behöver "
-"inte längre innehålla den form som du vill rita."
+"Använd samma form som du använde förra gången. Använd detta om du vill fortsätta "
+"att använda en anpassad form för att rita flera linjer med samma stil. På så "
+"sätt kan du återgå till att använda urklippet normalt. Det behöver inte längre "
+"innehålla den form som du vill rita."
 
 #: ../../source/pencil-tool.rst:50 0486efc1ac364d74bb3569fdde6ca808
 msgid "None"
@@ -146,8 +145,8 @@ msgstr "Ingen"
 
 #: ../../source/pencil-tool.rst:51 11360565b0af46f9b5457e0ec2520536
 msgid ""
-"The drawn path's outline will be of the same width along the whole length of "
-"the path."
+"The drawn path's outline will be of the same width along the whole length of the "
+"path."
 msgstr ""
 "Den ritade slingans kontur kommer att ha samma bredd längs hela slingans längd."
 
@@ -155,22 +154,22 @@ msgstr ""
 msgid ""
 "You can set the amount of :guilabel:`Smoothing` for the path you want to draw. "
 "When you use a mouse for drawing, making this value larger will make the line "
-"look less scrawly. When you use a graphics tablet with pen, you can use a "
-"lower smoothing value, and it will still look nice."
+"look less scrawly. When you use a graphics tablet with pen, you can use a lower "
+"smoothing value, and it will still look nice."
 msgstr ""
 "Du kan ställa in hur mycket :guilabel:`Mjukhet` som ska användas för den slinga "
 "du vill rita. När du använder en mus för att rita kommer linjen att se mindre "
-"skrovlig ut om du gör detta värde större. När du använder en ritplatta med "
-"penna kan du använda ett lägre utjämningsvärde och det kommer fortfarande att "
-"se snyggt ut."
+"skrovlig ut om du gör detta värde större. När du använder en ritplatta med penna "
+"kan du använda ett lägre utjämningsvärde och det kommer fortfarande att se "
+"snyggt ut."
 
 #: ../../source/pencil-tool.rst:59 0b18cf9116b84d9ea6ccb2883093407f
 msgid ""
 "The button |Icon for LPE based interactive simplify|:guilabel:`LPE based "
 "interactive simplify` allows you to draw a path where you can adjust the "
-"smoothing after you have finished drawing the path. Use the button |Icon for "
-"LPE simplify flatten|:guilabel:`LPE simplify flatten` to lock the result of "
-"the interactive smoothing. After it has been used, the path's smoothing can no "
+"smoothing after you have finished drawing the path. Use the button |Icon for LPE "
+"simplify flatten|:guilabel:`LPE simplify flatten` to lock the result of the "
+"interactive smoothing. After it has been used, the path's smoothing can no "
 "longer be adjusted."
 msgstr ""
 "Knappen |Icon for LPE based interactive simplify|:guilabel:`LPE based "
@@ -190,30 +189,29 @@ msgstr "Ikon för LPE förenkla plana ut"
 
 #: ../../source/pencil-tool.rst:65 00044042bbf3481a94a0eaa15b0ecc45
 msgid ""
-"'LPE' is the acronym for \"Live Path Effect\", a set of functionalities "
-"specific to Inkscape that can change paths non-destructively, to achieve "
-"spectacular results."
+"'LPE' is the acronym for \"Live Path Effect\", a set of functionalities specific "
+"to Inkscape that can change paths non-destructively, to achieve spectacular "
+"results."
 msgstr ""
-"\"LPE\" är en akronym för \"Live Path Effect\", en uppsättning funktioner som "
-"är specifika för Inkscape och som kan ändra banor på ett icke-destruktivt sätt "
-"för att uppnå spektakulära resultat."
+"\"LPE\" är en akronym för \"Live Path Effect\", en uppsättning funktioner som är "
+"specifika för Inkscape och som kan ändra slingor på ett icke-destruktivt sätt för "
+"att uppnå spektakulära resultat."
 
 #: ../../source/pencil-tool.rst:69 2a147a0f9f4647b78d7b198e192bde16
 msgid ""
-"To reset your changes to smoothing to the default value, you can use the "
-"button where the hover text says :guilabel:`reset pencil parameters to "
-"default`."
+"To reset your changes to smoothing to the default value, you can use the button "
+"where the hover text says :guilabel:`reset pencil parameters to default`."
 msgstr ""
 "För att återställa dina ändringar av utjämningen till standardvärdet kan du "
-"använda knappen där svävningstexten säger :guilabel:`återställ pennparametrar "
-"till standard`."
+"använda knappen där svävningstexten säger :guilabel:`återställ parametrar för "
+"blyertspenna till standard`."
 
 #: ../../source/pencil-tool.rst:72 ccda32e7895b4248ba034835ed3cf72b
 msgid ""
-"The pencil tool has three different **modes**. The results you get also depend "
-"a lot on the level of smoothing:"
+"The pencil tool has three different **modes**. The results you get also depend a "
+"lot on the level of smoothing:"
 msgstr ""
-"Pennverktyget har tre olika **lägen**. Det resultat du får beror också mycket "
+"Blyertsverktyget har tre olika **lägen**. Det resultat du får beror också mycket "
 "på nivån på utjämningen:"
 
 #: ../../source/pencil-tool.rst:75 2150f5e8746648b3b2db7e26d69c90f7
@@ -271,7 +269,7 @@ msgid ""
 "every click, and with :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`Alt`, each click will "
 "generate a random sized big dot."
 msgstr ""
-"Pennverktyget (liksom Pen tool) skapar **prickar** när du håller "
+"Blyertsverktyget (liksom Pennaverktyget) skapar **prickar** när du håller "
 "ned :kbd:`Ctrl` samtidigt som du klickar på duken. När du håller ner "
 "både :kbd:`Shift` + :kbd:`Ctrl` kommer prickarnas storlek att fördubblas. "
 "Med :kbd:`Ctrl` + :kbd:`Alt` kommer slumpmässigt valda små prickar att skapas "
@@ -288,7 +286,7 @@ msgstr "|Dots created with the pencil tool|"
 
 #: ../../source/pencil-tool.rst:158 9ba904d87331436fa93440031da0e93d
 msgid "Dots created with the pencil tool"
-msgstr "Prickar skapade med pennverktyget"
+msgstr "Prickar skapade med blyertsverktyget"
 
 #: ../../source/pencil-tool.rst:96 f1eba7d093054bb38fe0807b92792e4f
 msgid ""
@@ -296,10 +294,10 @@ msgid ""
 "with :kbd:`Ctrl` + :kbd:`Alt`, bottom left: with :kbd:`Ctrl` + :kbd:`Shift`, "
 "bottom right: with :kbd:`Ctrl` + :kbd:`Alt` + Shift."
 msgstr ""
-"Prickar skapade med pennverktyget. Överst till vänster: med :kbd:`Ctrl`, "
+"Prickar skapade med blyertsverktyget. Överst till vänster: med :kbd:`Ctrl`, "
 "överst till höger: med :kbd:`Ctrl` + :kbd:`Alt`, nederst till vänster: "
-"med :kbd:`Ctrl` + :kbd:`Shift`, nederst till höger: med :kbd:`Ctrl` "
-"+ :kbd:`Alt` + Shift."
+"med :kbd:`Ctrl` + :kbd:`Shift`, nederst till höger: med :kbd:`Ctrl` + :kbd:`Alt` "
+"+ Shift."
 
 #: ../../source/pencil-tool.rst:100 28ce343a2184475d977a16a348cf9532
 msgid "|A path drawn with Shape: Ellipse and no smoothing|"
@@ -320,7 +318,7 @@ msgstr "|The path has been extended from the square handle at its end.|"
 #: ../../source/pencil-tool.rst:106 ../../source/pencil-tool.rst:160
 #: 10f731188b62400cab83d2e1dee77ab1 3faaedeae52f4024aa2418f66325c669
 msgid "The path has been extended from the square handle at its end."
-msgstr "Stigen har förlängts från det fyrkantiga handtaget i dess ände."
+msgstr "Slingan har förlängts från det fyrkantiga handtaget i dess ände."
 
 #: ../../source/pencil-tool.rst:108 b7abb4a4cbdc4a9e90ca886588b79076
 msgid "|Shape: Ellipse with more smoothing|"
@@ -352,7 +350,7 @@ msgstr "|Path with Shape: From Clipboard|"
 
 #: ../../source/pencil-tool.rst:163 a6b5e5649c064a779316bb54ec13bceb
 msgid "Path with Shape: From Clipboard"
-msgstr "Sökväg med form: Från klippbordet"
+msgstr "Slinga med form: Från klippbordet"
 
 #: ../../source/pencil-tool.rst:118 6b744f64360c40038f22121e6e75d5ab
 msgid "This path uses Shape: From Clipboard"
@@ -401,11 +399,9 @@ msgstr "Slingan ritad i Spiro-läge med Form: Från urklipp"
 
 #: ../../source/pencil-tool.rst:135 7b30dc2e8d71487085fe17571b2515dd
 msgid ""
-"Path with Shape: From Clipboard drawn in Spiro mode with a smoothing level of "
-"40"
+"Path with Shape: From Clipboard drawn in Spiro mode with a smoothing level of 40"
 msgstr ""
-"Slinga med Form: Från klippbordet ritat i Spiro-läge med en utjämningsnivå på "
-"40"
+"Slinga med Form: Från klippbordet ritat i Spiro-läge med en utjämningsnivå på 40"
 
 #: ../../source/pencil-tool.rst:138 4a1003bedc854aa9a7634edd36577f17
 msgid "|The width of the path can be changed with the white circular handle.|"
@@ -417,10 +413,10 @@ msgstr "Slingans bredd kan ändras med det vita cirkelformade handtaget."
 
 #: ../../source/pencil-tool.rst:140 58dbade951954ffd84c70961380ea2db
 msgid ""
-"The same path as above, only wider. The width of a path that uses objects on "
-"the clipboard (and those that use 'Shape: Ellipse', both use the 'Pattern "
-"along Path' Live Path Effect) can be changed with the Node tool, using the "
-"white circular handle at the beginning of the path."
+"The same path as above, only wider. The width of a path that uses objects on the "
+"clipboard (and those that use 'Shape: Ellipse', both use the 'Pattern along "
+"Path' Live Path Effect) can be changed with the Node tool, using the white "
+"circular handle at the beginning of the path."
 msgstr ""
 "Samma slinga som ovan, fast bredare. Bredden på en slinga som använder objekt på "
 "klippbordet (och de som använder 'Form: Ellips', som båda använder Live Path "
@@ -428,8 +424,7 @@ msgstr ""
 "vita cirkulära handtaget i början av slingan."
 
 #: ../../source/pencil-tool.rst:145 b266a0ab819446f59a32579741bf7b70
-msgid ""
-"|The width of the path can be changed with the pink diamond-shaped handle.|"
+msgid "|The width of the path can be changed with the pink diamond-shaped handle.|"
 msgstr ""
 "|The width of the path can be changed with the pink diamond-shaped handle.|"
 
@@ -440,8 +435,8 @@ msgstr "Slingans bredd kan ändras med det rosa diamantformade handtaget."
 #: ../../source/pencil-tool.rst:148 b53276e83aee47198f46f39af2d4e1de
 msgid ""
 "The width of a path with a PowerStroke Live Path Effect (used by 'Shape: "
-"Triangle In / Out') can be adjusted with the node tool by moving a pink, "
-"diamond-shaped node, to achieve a non-constant path width."
+"Triangle In / Out') can be adjusted with the node tool by moving a pink, diamond-"
+"shaped node, to achieve a non-constant path width."
 msgstr ""
 "Bredden på en slinga med en PowerStroke Live Path Effect (som används av 'Form: "
 "Triangel in / ut') kan justeras med nodverktyget genom att flytta en rosa, "
