--- a/Inkscape/Inkscapes nybörjarguide/stacking-order.po
+++ b/Inkscape/Inkscapes nybörjarguide/stacking-order.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:23+0200\n"
+"PO-Revision-Date: 2025-05-16 08:34+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/stacking-order.rst:3 af8bec1aeabd4803b3f2389a4099bd11
 msgid "Stacking Order"
-msgstr "Order för stapling"
+msgstr "Staplingsordning"
 
 #: ../../source/stacking-order.rst:5 cf59e063dcfd45e0b843f8685051f3c8
 msgid ""
